Fix form wrap height

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ main {
 
 .form-wrap {
     background-color: #f3f3f3;
-    height: 100%;
     width: 60%;
     padding-top: 12vh;
 }
